--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,45 +38,62 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:support-v13:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.android.gms:play-services-vision:11.6.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     /**
      * Database Support Libraries
      */
+
     //===========================================================================================================
+
     /** Realm View Adapter */
     ext.realm_adapter_version = '2.1.1'
     compile "io.realm:android-adapters:$realm_adapter_version"
+
     //===========================================================================================================
+
     /**
      * DataBinding Libraries
      */
+
     //===========================================================================================================
+
     /** ButterKnife */
     ext.butterknife_version = '8.8.1'
     compile "com.jakewharton:butterknife:$butterknife_version"
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
+
     //===========================================================================================================
+
     /**
      * Camera Libraries
      */
+
     //===========================================================================================================
+
     /** Zxing */
     ext.zxing_embedded_version = '3.4.0'
     ext.zxing_core_version = '3.3.0'
     compile "com.journeyapps:zxing-android-embedded:$zxing_embedded_version@aar"
     compile "com.google.zxing:core:$zxing_core_version"
+
     //===========================================================================================================
 
     /** Jspoon Converter */
     ext.jspoon_version = '1.0.1'
     compile "pl.droidsonroids.retrofit2:converter-jspoon:$jspoon_version"
-
     implementation project(':android-commons')
+//    implementation project(':barcode')
 }
 
 repositories {
