--- a/android-commons/build.gradle
+++ b/android-commons/build.gradle
@@ -48,9 +48,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    compile 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
     // Important - the CameraSource implementation in this project requires version 8.1 or higher.
-    compile 'com.google.android.gms:play-services-vision:11.6.2'
+
 
 
     /**
